testsuite/tests/properties/invalid_call/too_many_args.lkt
import common

class BarNode: FooNode {
    @export fun bar_prop(): Int = node.root_prop(12, 15)
}
